# JsonLens

./: .gitignore  README.md  build.sh  build.yml  com.example.JsonLens.desktop  comment_test.json  meson.build  setup_imgui.sh
.github/workflows/: build.yml
src/: arena_json.c  arena_json.h  arena_json.vapi  document.h  main.cpp  main.vala  settings.cpp  settings.h  utils.cpp  utils.h  views.cpp  views.h
